# calendar-agent

./: .env.example  .gitignore  MANIFEST.in  check_write.py  credentials_calendar.json  credentials_gmail.json  gmail_state.json  pyproject.toml  token_calendar.json  token_gmail.json
actions/: airbnb_to_disco.py  airbnb_to_upstairs.py  block_manual.py  cancel.py  cancel_by_title.py  cleanup_booking.py  debug_list.py  peerspace_cancel.py  peerspace_to_disco.py
calendar_agent/: cli.py  config.py
calendar_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
calendar_agent/calendar/: google.py  mapping.py  service.py
calendar_agent/core/: types.py
calendar_agent/models/: booking.py  event.py
calendar_agent/store/: hashing.py
calendar_agent/sync/: run_airbnb.py  run_gmail.py  run_peerspace.py
calendar_agent/utils/: logging.py
docs/: 01_overview.md  02_functional_spec.md  03_flow.md
scripts/: airbnb_block_dates.py  airbnb_booking.py  airbnb_chat_watch.py  airbnb_login.py  airbnb_smoketest.py  gmail_sync.py  list_cals.py  peerspace_to_disco.py
tests/helpers/: cancel_by_title.py
tools/: gcal_tool.py  rules.py
